fix: remove invalid comment from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
-# Vercel Configuration
 {
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "outputDirectory": ".next"
+  "framework": "nextjs"
 }
